--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="col-lg-12 my-auto">
             <!-- Begin MailChimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
             <div id="mc_embed_signup">
               <form action="https://kaidee.us12.list-manage.com/subscribe/post?u=6afbe836179aedb8391734260&amp;id=cafcf38c68" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
